parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> funcdef_list block
Rule 2     program -> block
Rule 3     block -> LBRACE stmt_list RBRACE
Rule 4     funcdef_list -> funcdef_list funcdef
Rule 5     funcdef_list -> funcdef
Rule 6     param_list -> NAME
Rule 7     param_list -> param_list COMMA NAME
Rule 8     param_list_opt -> <empty>
Rule 9     param_list_opt -> param_list
Rule 10    funcdef -> FUN NAME LPAREN param_list_opt RPAREN ASSIGN block expr SEMI
Rule 11    stmt_list -> stmt_list statement
Rule 12    stmt_list -> statement
Rule 13    stmt_list -> <empty>
Rule 14    statement -> lvalue ASSIGN expr SEMI
Rule 15    statement -> PRINT LPAREN expr RPAREN SEMI
Rule 16    statement -> IF LPAREN expr RPAREN block
Rule 17    statement -> IF LPAREN expr RPAREN block ELSE block
Rule 18    statement -> WHILE LPAREN expr RPAREN block
Rule 19    statement -> block
Rule 20    lvalue -> NAME
Rule 21    lvalue -> expr LBRACK expr RBRACK
Rule 22    expr -> NAME LPAREN arg_list_opt RPAREN
Rule 23    arg_list -> expr
Rule 24    arg_list -> arg_list COMMA expr
Rule 25    arg_list_opt -> <empty>
Rule 26    arg_list_opt -> arg_list
Rule 27    expr -> NAME
Rule 28    expr -> HASH INT LPAREN expr RPAREN
Rule 29    expr -> HASH INT LPAREN expr COMMA tuple_list RPAREN
Rule 30    expr -> INT
Rule 31    expr -> REAL
Rule 32    expr -> STRING
Rule 33    expr -> BOOL
Rule 34    expr -> LPAREN expr RPAREN
Rule 35    expr -> LPAREN expr COMMA RPAREN
Rule 36    expr -> LPAREN expr COMMA tuple_list RPAREN
Rule 37    tuple_list -> expr COMMA tuple_list
Rule 38    tuple_list -> expr
Rule 39    expr -> LBRACK RBRACK
Rule 40    expr -> LBRACK list_elements RBRACK
Rule 41    list_elements -> expr COMMA list_elements
Rule 42    list_elements -> expr
Rule 43    expr -> expr PLUS expr
Rule 44    expr -> expr MINUS expr
Rule 45    expr -> expr TIMES expr
Rule 46    expr -> expr EXP expr
Rule 47    expr -> expr DIV expr
Rule 48    expr -> expr INTDIV expr
Rule 49    expr -> expr MOD expr
Rule 50    expr -> expr ANDALSO expr
Rule 51    expr -> expr ORELSE expr
Rule 52    expr -> expr EQUALSTO expr
Rule 53    expr -> expr NOTEQUAL expr
Rule 54    expr -> expr LESSTHAN expr
Rule 55    expr -> expr LESSTHANEQUAL expr
Rule 56    expr -> expr GREATERTHAN expr
Rule 57    expr -> expr GREATERTHANEQUAL expr
Rule 58    expr -> expr CONS expr
Rule 59    expr -> expr IN expr
Rule 60    expr -> expr LBRACK expr RBRACK
Rule 61    expr -> NOT expr
Rule 62    expr -> MINUS expr

Terminals, with rules where they appear

ANDALSO              : 50
ASSIGN               : 10 14
BOOL                 : 33
COMMA                : 7 24 29 35 36 37 41
CONS                 : 58
DIV                  : 47
ELSE                 : 17
EQUALSTO             : 52
EXP                  : 46
FUN                  : 10
GREATERTHAN          : 56
GREATERTHANEQUAL     : 57
HASH                 : 28 29
IF                   : 16 17
IN                   : 59
INT                  : 28 29 30
INTDIV               : 48
LBRACE               : 3
LBRACK               : 21 39 40 60
LESSTHAN             : 54
LESSTHANEQUAL        : 55
LPAREN               : 10 15 16 17 18 22 28 29 34 35 36
MINUS                : 44 62
MOD                  : 49
NAME                 : 6 7 10 20 22 27
NOT                  : 61
NOTEQUAL             : 53
ORELSE               : 51
PLUS                 : 43
PRINT                : 15
RBRACE               : 3
RBRACK               : 21 39 40 60
REAL                 : 31
RPAREN               : 10 15 16 17 18 22 28 29 34 35 36
SEMI                 : 10 14 15
STRING               : 32
TIMES                : 45
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

arg_list             : 24 26
arg_list_opt         : 22
block                : 1 2 10 16 17 17 18 19
expr                 : 10 14 15 16 17 18 21 21 23 24 28 29 34 35 36 37 38 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 62
funcdef              : 4 5
funcdef_list         : 1 4
list_elements        : 40 41
lvalue               : 14
param_list           : 7 9
param_list_opt       : 10
program              : 0
statement            : 11 12
stmt_list            : 3 11
tuple_list           : 29 36 37

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . funcdef_list block
    (2) program -> . block
    (4) funcdef_list -> . funcdef_list funcdef
    (5) funcdef_list -> . funcdef
    (3) block -> . LBRACE stmt_list RBRACE
    (10) funcdef -> . FUN NAME LPAREN param_list_opt RPAREN ASSIGN block expr SEMI

    LBRACE          shift and go to state 5
    FUN             shift and go to state 6

    program                        shift and go to state 1
    funcdef_list                   shift and go to state 2
    block                          shift and go to state 3
    funcdef                        shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> funcdef_list . block
    (4) funcdef_list -> funcdef_list . funcdef
    (3) block -> . LBRACE stmt_list RBRACE
    (10) funcdef -> . FUN NAME LPAREN param_list_opt RPAREN ASSIGN block expr SEMI

    LBRACE          shift and go to state 5
    FUN             shift and go to state 6

    block                          shift and go to state 7
    funcdef                        shift and go to state 8

state 3

    (2) program -> block .

    $end            reduce using rule 2 (program -> block .)


state 4

    (5) funcdef_list -> funcdef .

    LBRACE          reduce using rule 5 (funcdef_list -> funcdef .)
    FUN             reduce using rule 5 (funcdef_list -> funcdef .)


state 5

    (3) block -> LBRACE . stmt_list RBRACE
    (11) stmt_list -> . stmt_list statement
    (12) stmt_list -> . statement
    (13) stmt_list -> .
    (14) statement -> . lvalue ASSIGN expr SEMI
    (15) statement -> . PRINT LPAREN expr RPAREN SEMI
    (16) statement -> . IF LPAREN expr RPAREN block
    (17) statement -> . IF LPAREN expr RPAREN block ELSE block
    (18) statement -> . WHILE LPAREN expr RPAREN block
    (19) statement -> . block
    (20) lvalue -> . NAME
    (21) lvalue -> . expr LBRACK expr RBRACK
    (3) block -> . LBRACE stmt_list RBRACE
    (22) expr -> . NAME LPAREN arg_list_opt RPAREN
    (27) expr -> . NAME
    (28) expr -> . HASH INT LPAREN expr RPAREN
    (29) expr -> . HASH INT LPAREN expr COMMA tuple_list RPAREN
    (30) expr -> . INT
    (31) expr -> . REAL
    (32) expr -> . STRING
    (33) expr -> . BOOL
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . LPAREN expr COMMA RPAREN
    (36) expr -> . LPAREN expr COMMA tuple_list RPAREN
    (39) expr -> . LBRACK RBRACK
    (40) expr -> . LBRACK list_elements RBRACK
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr TIMES expr
    (46) expr -> . expr EXP expr
    (47) expr -> . expr DIV expr
    (48) expr -> . expr INTDIV expr
    (49) expr -> . expr MOD expr
    (50) expr -> . expr ANDALSO expr
    (51) expr -> . expr ORELSE expr
    (52) expr -> . expr EQUALSTO expr
    (53) expr -> . expr NOTEQUAL expr
    (54) expr -> . expr LESSTHAN expr
    (55) expr -> . expr LESSTHANEQUAL expr
    (56) expr -> . expr GREATERTHAN expr
    (57) expr -> . expr GREATERTHANEQUAL expr
    (58) expr -> . expr CONS expr
    (59) expr -> . expr IN expr
    (60) expr -> . expr LBRACK expr RBRACK
    (61) expr -> . NOT expr
    (62) expr -> . MINUS expr

  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for HASH resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LBRACK resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    RBRACE          reduce using rule 13 (stmt_list -> .)
    PRINT           shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 17
    NAME            shift and go to state 18
    LBRACE          shift and go to state 5
    HASH            shift and go to state 20
    INT             shift and go to state 21
    REAL            shift and go to state 22
    STRING          shift and go to state 23
    BOOL            shift and go to state 24
    LPAREN          shift and go to state 14
    LBRACK          shift and go to state 19
    NOT             shift and go to state 26
    MINUS           shift and go to state 25

  ! PRINT           [ reduce using rule 13 (stmt_list -> .) ]
  ! IF              [ reduce using rule 13 (stmt_list -> .) ]
  ! WHILE           [ reduce using rule 13 (stmt_list -> .) ]
  ! NAME            [ reduce using rule 13 (stmt_list -> .) ]
  ! LBRACE          [ reduce using rule 13 (stmt_list -> .) ]
  ! HASH            [ reduce using rule 13 (stmt_list -> .) ]
  ! INT             [ reduce using rule 13 (stmt_list -> .) ]
  ! REAL            [ reduce using rule 13 (stmt_list -> .) ]
  ! STRING          [ reduce using rule 13 (stmt_list -> .) ]
  ! BOOL            [ reduce using rule 13 (stmt_list -> .) ]
  ! LPAREN          [ reduce using rule 13 (stmt_list -> .) ]
  ! LBRACK          [ reduce using rule 13 (stmt_list -> .) ]
  ! NOT             [ reduce using rule 13 (stmt_list -> .) ]
  ! MINUS           [ reduce using rule 13 (stmt_list -> .) ]

    stmt_list                      shift and go to state 9
    statement                      shift and go to state 10
    lvalue                         shift and go to state 11
    expr                           shift and go to state 12
    block                          shift and go to state 16

state 6

    (10) funcdef -> FUN . NAME LPAREN param_list_opt RPAREN ASSIGN block expr SEMI

    NAME            shift and go to state 27


state 7

    (1) program -> funcdef_list block .

    $end            reduce using rule 1 (program -> funcdef_list block .)


state 8

    (4) funcdef_list -> funcdef_list funcdef .

    LBRACE          reduce using rule 4 (funcdef_list -> funcdef_list funcdef .)
    FUN             reduce using rule 4 (funcdef_list -> funcdef_list funcdef .)


state 9

    (3) block -> LBRACE stmt_list . RBRACE
    (11) stmt_list -> stmt_list . statement
    (14) statement -> . lvalue ASSIGN expr SEMI
    (15) statement -> . PRINT LPAREN expr RPAREN SEMI
    (16) statement -> . IF LPAREN expr RPAREN block
    (17) statement -> . IF LPAREN expr RPAREN block ELSE block
    (18) statement -> . WHILE LPAREN expr RPAREN block
    (19) statement -> . block
    (20) lvalue -> . NAME
    (21) lvalue -> . expr LBRACK expr RBRACK
    (3) block -> . LBRACE stmt_list RBRACE
    (22) expr -> . NAME LPAREN arg_list_opt RPAREN
    (27) expr -> . NAME
    (28) expr -> . HASH INT LPAREN expr RPAREN
    (29) expr -> . HASH INT LPAREN expr COMMA tuple_list RPAREN
    (30) expr -> . INT
    (31) expr -> . REAL
    (32) expr -> . STRING
    (33) expr -> . BOOL
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . LPAREN expr COMMA RPAREN
    (36) expr -> . LPAREN expr COMMA tuple_list RPAREN
    (39) expr -> . LBRACK RBRACK
    (40) expr -> . LBRACK list_elements RBRACK
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr TIMES expr
    (46) expr -> . expr EXP expr
    (47) expr -> . expr DIV expr
    (48) expr -> . expr INTDIV expr
    (49) expr -> . expr MOD expr
    (50) expr -> . expr ANDALSO expr
    (51) expr -> . expr ORELSE expr
    (52) expr -> . expr EQUALSTO expr
    (53) expr -> . expr NOTEQUAL expr
    (54) expr -> . expr LESSTHAN expr
    (55) expr -> . expr LESSTHANEQUAL expr
    (56) expr -> . expr GREATERTHAN expr
    (57) expr -> . expr GREATERTHANEQUAL expr
    (58) expr -> . expr CONS expr
    (59) expr -> . expr IN expr
    (60) expr -> . expr LBRACK expr RBRACK
    (61) expr -> . NOT expr
    (62) expr -> . MINUS expr

    RBRACE          shift and go to state 28
    PRINT           shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 17
    NAME            shift and go to state 18
    LBRACE          shift and go to state 5
    HASH            shift and go to state 20
    INT             shift and go to state 21
    REAL            shift and go to state 22
    STRING          shift and go to state 23
    BOOL            shift and go to state 24
    LPAREN          shift and go to state 14
    LBRACK          shift and go to state 19
    NOT             shift and go to state 26
    MINUS           shift and go to state 25

    statement                      shift and go to state 29
    lvalue                         shift and go to state 11
    expr                           shift and go to state 12
    block                          shift and go to state 16

state 10

    (12) stmt_list -> statement .

    RBRACE          reduce using rule 12 (stmt_list -> statement .)
    PRINT           reduce using rule 12 (stmt_list -> statement .)
    IF              reduce using rule 12 (stmt_list -> statement .)
    WHILE           reduce using rule 12 (stmt_list -> statement .)
    NAME            reduce using rule 12 (stmt_list -> statement .)
    LBRACE          reduce using rule 12 (stmt_list -> statement .)
    HASH            reduce using rule 12 (stmt_list -> statement .)
    INT             reduce using rule 12 (stmt_list -> statement .)
    REAL            reduce using rule 12 (stmt_list -> statement .)
    STRING          reduce using rule 12 (stmt_list -> statement .)
    BOOL            reduce using rule 12 (stmt_list -> statement .)
    LPAREN          reduce using rule 12 (stmt_list -> statement .)
    LBRACK          reduce using rule 12 (stmt_list -> statement .)
    NOT             reduce using rule 12 (stmt_list -> statement .)
    MINUS           reduce using rule 12 (stmt_list -> statement .)


state 11

    (14) statement -> lvalue . ASSIGN expr SEMI

    ASSIGN          shift and go to state 30


state 12

    (21) lvalue -> expr . LBRACK expr RBRACK
    (43) expr -> expr . PLUS expr
    (44) expr -> expr . MINUS expr
    (45) expr -> expr . TIMES expr
    (46) expr -> expr . EXP expr
    (47) expr -> expr . DIV expr
    (48) expr -> expr . INTDIV expr
    (49) expr -> expr . MOD expr
    (50) expr -> expr . ANDALSO expr
    (51) expr -> expr . ORELSE expr
    (52) expr -> expr . EQUALSTO expr
    (53) expr -> expr . NOTEQUAL expr
    (54) expr -> expr . LESSTHAN expr
    (55) expr -> expr . LESSTHANEQUAL expr
    (56) expr -> expr . GREATERTHAN expr
    (57) expr -> expr . GREATERTHANEQUAL expr
    (58) expr -> expr . CONS expr
    (59) expr -> expr . IN expr
    (60) expr -> expr . LBRACK expr RBRACK

    LBRACK          shift and go to state 31
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    EXP             shift and go to state 35
    DIV             shift and go to state 36
    INTDIV          shift and go to state 37
    MOD             shift and go to state 38
    ANDALSO         shift and go to state 39
    ORELSE          shift and go to state 40
    EQUALSTO        shift and go to state 41
    NOTEQUAL        shift and go to state 42
    LESSTHAN        shift and go to state 43
    LESSTHANEQUAL   shift and go to state 44
    GREATERTHAN     shift and go to state 45
    GREATERTHANEQUAL shift and go to state 46
    CONS            shift and go to state 47
    IN              shift and go to state 48


state 13

    (15) statement -> PRINT . LPAREN expr RPAREN SEMI

    LPAREN          shift and go to state 49


state 14

    (34) expr -> LPAREN . expr RPAREN
    (35) expr -> LPAREN . expr COMMA RPAREN
    (36) expr -> LPAREN . expr COMMA tuple_list RPAREN
    (22) expr -> . NAME LPAREN arg_list_opt RPAREN
    (27) expr -> . NAME
    (28) expr -> . HASH INT LPAREN expr RPAREN
    (29) expr -> . HASH INT LPAREN expr COMMA tuple_list RPAREN
    (30) expr -> . INT
    (31) expr -> . REAL
    (32) expr -> . STRING
    (33) expr -> . BOOL
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . LPAREN expr COMMA RPAREN
    (36) expr -> . LPAREN expr COMMA tuple_list RPAREN
    (39) expr -> . LBRACK RBRACK
    (40) expr -> . LBRACK list_elements RBRACK
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr TIMES expr
    (46) expr -> . expr EXP expr
    (47) expr -> . expr DIV expr
    (48) expr -> . expr INTDIV expr
    (49) expr -> . expr MOD expr
    (50) expr -> . expr ANDALSO expr
    (51) expr -> . expr ORELSE expr
    (52) expr -> . expr EQUALSTO expr
    (53) expr -> . expr NOTEQUAL expr
    (54) expr -> . expr LESSTHAN expr
    (55) expr -> . expr LESSTHANEQUAL expr
    (56) expr -> . expr GREATERTHAN expr
    (57) expr -> . expr GREATERTHANEQUAL expr
    (58) expr -> . expr CONS expr
    (59) expr -> . expr IN expr
    (60) expr -> . expr LBRACK expr RBRACK
    (61) expr -> . NOT expr
    (62) expr -> . MINUS expr

    NAME            shift and go to state 51
    HASH            shift and go to state 20
    INT             shift and go to state 21
    REAL            shift and go to state 22
    STRING          shift and go to state 23
    BOOL            shift and go to state 24
    LPAREN          shift and go to state 14
    LBRACK          shift and go to state 19
    NOT             shift and go to state 26
    MINUS           shift and go to state 25

    expr                           shift and go to state 50

state 15

    (16) statement -> IF . LPAREN expr RPAREN block
    (17) statement -> IF . LPAREN expr RPAREN block ELSE block

    LPAREN          shift and go to state 52


state 16

    (19) statement -> block .

    RBRACE          reduce using rule 19 (statement -> block .)
    PRINT           reduce using rule 19 (statement -> block .)
    IF              reduce using rule 19 (statement -> block .)
    WHILE           reduce using rule 19 (statement -> block .)
    NAME            reduce using rule 19 (statement -> block .)
    LBRACE          reduce using rule 19 (statement -> block .)
    HASH            reduce using rule 19 (statement -> block .)
    INT             reduce using rule 19 (statement -> block .)
    REAL            reduce using rule 19 (statement -> block .)
    STRING          reduce using rule 19 (statement -> block .)
    BOOL            reduce using rule 19 (statement -> block .)
    LPAREN          reduce using rule 19 (statement -> block .)
    LBRACK          reduce using rule 19 (statement -> block .)
    NOT             reduce using rule 19 (statement -> block .)
    MINUS           reduce using rule 19 (statement -> block .)


state 17

    (18) statement -> WHILE . LPAREN expr RPAREN block

    LPAREN          shift and go to state 53


state 18

    (20) lvalue -> NAME .
    (22) expr -> NAME . LPAREN arg_list_opt RPAREN
    (27) expr -> NAME .
